--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.0",
     "knex": "^0.16.3",
-    "pg": "^7.8.0"
+    "lodash": "^4.17.11",
+    "mongodb": "^3.1.13",
+    "mongoose": "^5.4.19",
+    "multer": "^1.4.1",
+    "pg": "^7.8.0",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
