--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.4",
+    "hbs": "^4.0.4",
     "jsonwebtoken": "^8.5.0",
     "knex": "^0.16.3",
     "lodash": "^4.17.11",
